--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="text-muted">wats2000</h3>
+        <h3 class="text-muted">WATS2000 Setting Up a Dev Env</h3>
       </div>
 
       <div class="jumbotron">
