--- a/app/index.html
+++ b/app/index.html
@@ -34,12 +34,13 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-search"></span> Search</a></li>
         </ul>
-        <h3 class="text-muted">WATS2000 Setting Up a Dev Env</h3>
+        <h3>WATS2000 - SCSS</h3>
       </div>
 
       <div class="jumbotron">
-        <h1>'Allo, 'Allo!</h1>
+        <h1><i>'Allo, 'Allo!</i></h1>
         <p class="lead">Always a pleasure scaffolding your apps.</p>
         <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
       </div>
