--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>wats2000</title>
+    <title>wats2000 - SCSS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,9 +34,8 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-search"></span> Search</a></li>
         </ul>
-        <h3>WATS2000 - SCSS</h3>
+        <h3 class="text-muted">WATS2000 SCSS</h3>
       </div>
 
       <div class="jumbotron">
@@ -64,7 +63,7 @@
       </div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p class="text-center"><small>SU WATS2010 SCSS, Spring 2016, Sunny Yuen.  <span class="glyphicon glyphicon-heart"></span> from the Yeoman team</small></p>
       </div>
     </div>
     
